tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/us-east-2/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-1078327c",
                    "NetworkAclId": "acl-e93f9482",
                    "SubnetId": "subnet-ca5aaea1"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-1278327e",
                    "NetworkAclId": "acl-e93f9482",
                    "SubnetId": "subnet-a28217ee"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-1178327d",
                    "NetworkAclId": "acl-e93f9482",
                    "SubnetId": "subnet-2f4f6255"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-e93f9482",
            "OwnerId": "167389268608",
            "Tags": [],
            "VpcId": "vpc-2d3af646"
        }
    ]
}
