tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/us-east-2/ec2-describe-security-groups.json
{
    "SecurityGroups": [
        {
            "Description": "launch-wizard-1 created 2020-09-08T09:44:44.549+03:00",
            "GroupId": "sg-02195bfab5637ad38",
            "GroupName": "launch-wizard-1",
            "IpPermissions": [
                {
                    "FromPort": 3389,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "172.227.123.61/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 3389,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "172.227.123.61/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "167389268608",
            "VpcId": "vpc-2d3af646"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-8596a8e2",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-8596a8e2",
                            "UserId": "167389268608"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "172.227.123.61/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "167389268608",
            "VpcId": "vpc-2d3af646"
        }
    ]
}
